unpackaged/main/default/objects/A_Game_For_Layout_Dev__c/A_Game_For_Layout_Dev__c.object-meta.xml
<CustomObject>
    <description>A bunch of games stuff for testing Layouts work.</description>
    <label>A Game - (Layout Dev)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A Game - (Layout Dev)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>