unpackaged/main/default/objects/A_Game_For_Layout_Dev__c/fields/Positive_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Positive_Reviews__c</fullName>
    <label>Positive Reviews</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>