unpackaged/main/default/objects/A_Game_For_Layout_Dev__c/fields/Soundtrack__c.field-meta.xml
<CustomField>
    <fullName>Soundtrack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Soundtrack for this game.</description>
    <label>Soundtrack</label>
    <referenceTo>A_Game_Soundtrack__c</referenceTo>
    <relationshipLabel>.Games - (Layout Dev)</relationshipLabel>
    <relationshipName>Games_Layout_Dev</relationshipName>
    <type>Lookup</type>
</CustomField>