unpackaged/main/default/objects/A_Game_For_Layout_Dev__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>User-defined tags (stolen from Steam)</description>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2D</fullName>
            </value>
            <value>
                <fullName>3D</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Action-Adventure</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Anime</fullName>
            </value>
            <value>
                <fullName>Arcade</fullName>
            </value>
            <value>
                <fullName>Atmospheric</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Colorful</fullName>
            </value>
            <value>
                <fullName>Combat</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Co-op</fullName>
            </value>
            <value>
                <fullName>Cute</fullName>
            </value>
            <value>
                <fullName>Early Access</fullName>
            </value>
            <value>
                <fullName>Exploration</fullName>
            </value>
            <value>
                <fullName>Family Friendly</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Female Protagonist</fullName>
            </value>
            <value>
                <fullName>First-Person</fullName>
            </value>
            <value>
                <fullName>Free to Play</fullName>
            </value>
            <value>
                <fullName>Funny</fullName>
            </value>
            <value>
                <fullName>Gore</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Indie</fullName>
            </value>
            <value>
                <fullName>Massively Multiplayer</fullName>
            </value>
            <value>
                <fullName>Multiplayer</fullName>
            </value>
            <value>
                <fullName>Open World</fullName>
            </value>
            <value>
                <fullName>Pixel Graphics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>