unpackaged/main/default/objects/A_Game_For_Layout_Dev__c/recordTypes/Example_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Example_Record_Type</fullName>
    <active>true</active>
    <label>Example Record Type</label>
</RecordType>